@@ -52,6 +52,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+           <argLine>--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+          <useSystemClassLoader>true</useSystemClassLoader>
           <forkedProcessExitTimeoutInSeconds>45</forkedProcessExitTimeoutInSeconds>
           <forkedProcessTimeoutInSeconds>240</forkedProcessTimeoutInSeconds>
         </configuration>
@@ -88,6 +90,17 @@
       <artifactId>jetty-hazelcast</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.hazelcast</groupId>
+          <artifactId>hazelcast</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+       <groupId>com.hazelcast</groupId>
+       <artifactId>hazelcast-all</artifactId>
+       <version>${hazelcast.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
